force-app/main/default/objects/AgencyReport__c/AgencyReport__c.object-meta.xml
<CustomObject>
    <description>對團報表統計數據</description>
    <label>Agency Report</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>