force-app/main/default/objects/AgencyReport__c/fields/Group_By_Agency__c.field-meta.xml
<CustomField>
    <fullName>Group_By_Agency__c</fullName>
    <label>Group By Agency</label>
    <referenceTo>Group_By_Agency__c</referenceTo>
    <relationshipLabel>Agency Reports</relationshipLabel>
    <relationshipName>Agency_Reports</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>