force-app/main/default/objects/AgencyReport__c/fields/Group_By_Waypoint__c.field-meta.xml
<CustomField>
    <fullName>Group_By_Waypoint__c</fullName>
    <label>Group By Waypoint</label>
    <referenceTo>Group_By_Waypoint__c</referenceTo>
    <relationshipLabel>Agency Reports</relationshipLabel>
    <relationshipName>Agency_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>