force-app/main/default/objects/AgencyReport__c/fields/Original_AU__c.field-meta.xml
<CustomField>
    <fullName>Original_AU__c</fullName>
    <formula>Case__r.Departing_AU__r.AU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original AU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>