force-app/main/default/objects/AgencyReport__c/fields/Short__c.field-meta.xml
<CustomField>
    <fullName>Short__c</fullName>
    <formula>Account__r.Short__c</formula>
    <label>Short</label>
    <type>Text</type>
</CustomField>