force-app/main/default/objects/AgencyReport__c/fields/Total_Final_Allocated_Seats__c.field-meta.xml
<CustomField>
    <fullName>Total_Final_Allocated_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <description>實際發位數</description>
    <label>Total Final Allocated Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>