force-app/main/default/objects/AgencyReport__c/fields/Total_Seat_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Seat_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <description>總對團數</description>
    <label>Total Seat Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>