force-app/main/default/objects/AgencyReport__c/fields/Total_Seat_Sales_Y__c.field-meta.xml
<CustomField>
    <fullName>Total_Seat_Sales_Y__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total_Seat_Sales_Y</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>