force-app/main/default/objects/AgencyReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Case__c</columns>
    <columns>Departing_Flight_Date__c</columns>
    <columns>Area__c</columns>
    <columns>WaypointTaiwan__c</columns>
    <columns>WaypointOutside__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>